--- a/index.html
+++ b/index.html
@@ -5,17 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CMAT Practice</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        #container{
-            display: flex;align-items: center;justify-content: center;flex-direction: column;
-        }
-        #question{
-            display: flex;align-items: center;justify-content: center;flex-direction: column;
-        }
-        #buttons{
-            display: flex;align-items: center;justify-content: center;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="container">
@@ -24,9 +14,16 @@
         <div id="buttons" class="container">
             <button type="button" id="tables" class="button btn btn-outline-primary mx-3">Tables</button>
             <button type="button" id="squares" class="button btn btn-outline-primary mx-3">Squares</button>
+            <button type="button" id="cubes" class="button btn btn-outline-primary mx-3">Cubes</button>
         </div>
         
-        <script src="script.js"></script>
+    <div id="answer-space">
+        <button id="answer" class="button btn"></button>
     </div>
+</div>
+
+<script src="script.js"></script>
 </body>
 </html>
+<!-- 
+3)button click karne par turant display hona chahiye -->
